Basic tests passing

--- a/unittests/Frontend/CMakeLists.txt
+++ b/unittests/Frontend/CMakeLists.txt
@@ -4,6 +4,7 @@ set(LLVM_LINK_COMPONENTS
 
 add_clang_unittest(FrontendTests
   FrontendActionTest.cpp
+  AnalyzerOptionsTest.cpp
   )
 target_link_libraries(FrontendTests
   clangAST
